[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#[target.'cfg(target_os = "monk")'.dependencies]
#hermit = { path= "../libhermit-rs" }

[features]
acpi = []
default = [
    "acpi",
    "pci",
    "pci-ids",
    "smp",
    "fsgsbase",
]
dhcpv4 = []
fsgsbase = []
instrument = []
pci = []
pci-ids = ["pci"]
smp = []
tcp = []
trace = []
vga = []